# ipfs_cid_ethereum_storage

./: Cargo.toml  README.md
artifacts/: IPFS_CID_Store.abi
ethereum_contract/: store.sol
src/: lib.rs  main.rs
