[package]
name = "ipfs_cid_ethereum_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ipfs-api-backend-actix = "0.6"
web3 = "0.17.0"

actix-rt = "*"
futures = "*"
tokio = { version = "1", features = ["full"]}

clap = { version = "4.0.18", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
hex = "*"
hex-literal = "*"

